raiden/tests/ui/gsi_key_conditions/sort_key_before_partition.stderr
error[E0277]: the trait bound `KeyConditionFilledOrWaitOperator<TypedCompositeGsiSortKeyTestTestGsiSort1KeyConditionToken, TypedCompositeGsiSortKeyTestTestGsiSort2KeyConditionToken>: raiden::KeyConditionBuilder<TypedCompositeGsiSortKeyTestTestGsiPartitionKeyConditionToken, _>` is not satisfied
  --> tests/ui/gsi_key_conditions/sort_key_before_partition.rs:28:53
   |
28 |     let _ = client.query().test_gsi().key_condition(cond);
   |                                       ------------- ^^^^ unsatisfied trait bound
   |                                       |
   |                                       required by a bound introduced by this call
   |
   = help: the trait `KeyConditionBuilder<TypedCompositeGsiSortKeyTestTestGsiPartitionKeyConditionToken, _>` is not implemented for `KeyConditionFilledOrWaitOperator<TypedCompositeGsiSortKeyTestTestGsiSort1KeyConditionToken, TypedCompositeGsiSortKeyTestTestGsiSort2KeyConditionToken>`
           but trait `KeyConditionBuilder<TypedCompositeGsiSortKeyTestTestGsiSort1KeyConditionToken, TypedCompositeGsiSortKeyTestTestGsiSort2KeyConditionToken>` is implemented for it
   = help: for that trait implementation, expected `TypedCompositeGsiSortKeyTestTestGsiSort1KeyConditionToken`, found `TypedCompositeGsiSortKeyTestTestGsiPartitionKeyConditionToken`
note: required by a bound in `TypedCompositeGsiSortKeyTestQueryBuilder::<'a, T>::key_condition`
  --> tests/ui/gsi_key_conditions/sort_key_before_partition.rs:3:10
   |
3  | #[derive(Raiden)]
   |          ^^^^^^ required by this bound in `TypedCompositeGsiSortKeyTestQueryBuilder::<'a, T>::key_condition`
   = note: this error originates in the derive macro `Raiden` (in Nightly builds, run with -Z macro-backtrace for more info)
